--- a/learn/decodable/index.html
+++ b/learn/decodable/index.html
@@ -37,7 +37,14 @@
           <h2>I Can Hop</h2>
         </a>
       </div>
-      <!-- Add future book-cards here -->
+
+      <!-- Book 13 Card -->
+      <div class="book-card">
+        <a href="./book13/menu.html">
+          <img src="/assets/images/decodable/book13/poster.webp" alt="A Fat Hat cover">
+          <h2>A Fat Hat</h2>
+        </a>
+      </div>
     </div>
   </main>
 
