--- a/learn/decodable/index.html
+++ b/learn/decodable/index.html
@@ -23,30 +23,30 @@
   </header>
 
   <!-- Main Content -->
-  <main class="decodable-index container">
-    <div class="page-header text-center">
-      <h1>Decodable Books</h1>
-      <p>Select a book below to begin:</p>
+<main class="decodable-index container" style="text-align: center;">
+  <div class="page-header">
+    <h1 style="font-size: 2.5rem; margin-bottom: 0.2rem;">Decodable Books</h1>
+    <p style="font-size: 1.1rem; margin-bottom: 2rem;">Select a book below to begin:</p>
+  </div>
+
+  <div class="book-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 2rem; justify-items: center;">
+    <!-- Book 12 Card -->
+    <div class="book-card">
+      <a href="./book12/menu.html">
+        <img src="/assets/images/decodable/book12/poster.webp" alt="I Can Hop cover" style="max-width: 100%; border-radius: 12px;">
+        <h2 style="margin-top: 0.5rem;">I Can Hop</h2>
+      </a>
     </div>
 
-    <div class="book-grid">
-      <!-- Book 12 Card -->
-      <div class="book-card">
-        <a href="./book12/menu.html">
-          <img src="/assets/images/decodable/book12/poster.webp" alt="I Can Hop cover">
-          <h2>I Can Hop</h2>
-        </a>
-      </div>
-
-      <!-- Book 13 Card -->
-      <div class="book-card">
-        <a href="./book13/menu.html">
-          <img src="/assets/images/decodable/book13/poster.webp" alt="A Fat Hat cover">
-          <h2>A Fat Hat</h2>
-        </a>
-      </div>
+    <!-- Book 13 Card -->
+    <div class="book-card">
+      <a href="./book13/menu.html">
+        <img src="/assets/images/decodable/book13/poster.webp" alt="A Fat Hat cover" style="max-width: 100%; border-radius: 12px;">
+        <h2 style="margin-top: 0.5rem;">A Fat Hat</h2>
+      </a>
     </div>
-  </main>
+  </div>
+</main>
 
   <!-- Footer -->
   <footer class="site-footer">
