--- a/learn/decodable/book13/prelearning.html
+++ b/learn/decodable/book13/prelearning.html
@@ -32,15 +32,20 @@
       color: white;
       padding: 0.6rem 2rem;
       font-size: 2rem;
-      border-radius: 50px;
+      border-radius: 999px;
       margin: 1rem auto 2rem;
       text-align: center;
     }
-    .book-poster {
-      display: block;
-      margin: 1rem auto 0;
-      max-width: 200px;
+    .book-header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .book-header img {
+      max-width: 180px;
       border-radius: 12px;
+      margin-top: 2rem;
     }
     .bottom-nav {
       display: flex;
@@ -56,6 +61,7 @@
       border-radius: 999px;
       text-decoration: none;
       transition: background 0.3s;
+      display: inline-block;
     }
     .bottom-nav a:hover {
       background: #5aaee6;
@@ -67,11 +73,11 @@
 </head>
 <body>
   <main class="decodable-prelearning container">
-    <!-- Poster Image -->
-    <img src="../../../assets/images/decodable/book13/poster.webp" alt="A Fat Hat Cover" class="book-poster">
-
-    <!-- Title Bubble -->
-    <h1 class="title-bubble">A Fat Hat</h1>
+    <!-- Header with Poster and Title -->
+    <div class="book-header">
+      <img src="../../../assets/images/decodable/book13/poster.webp" alt="A Fat Hat Cover">
+      <h1 class="title-bubble">A Fat Hat</h1>
+    </div>
 
     <!-- 1. Letter Sounds -->
     <section class="phoneme-table section-box">
