--- a/learn/decodable/book13/prelearning.html
+++ b/learn/decodable/book13/prelearning.html
@@ -9,6 +9,45 @@
   <link rel="stylesheet" href="../../../styles/learn.css">
   <link rel="stylesheet" href="../../../styles/decodable.css">
   <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #f5f8fc;
+      font-family: sans-serif;
+    }
+
+    main.decodable-prelearning {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 100%;
+      padding: 2rem 1rem;
+    }
+
+    .book-header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 1rem;
+    }
+
+    .book-header img {
+      max-width: 200px;
+      border-radius: 12px;
+      margin-top: 2rem;
+    }
+
+    .title-bubble {
+      display: inline-block;
+      background: #4e9cff;
+      color: white;
+      padding: 0.6rem 2rem;
+      font-size: 2rem;
+      border-radius: 999px;
+      margin-top: 1rem;
+      text-align: center;
+    }
+
     .section-box {
       border: 2px solid #ccc;
       border-radius: 10px;
@@ -16,7 +55,10 @@
       margin-bottom: 2rem;
       background-color: #fff;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+      width: 100%;
+      max-width: 720px;
     }
+
     .sound-btn {
       font-size: 1.1rem;
       padding: 0.5rem 1rem;
@@ -26,33 +68,24 @@
       background-color: #f7f7f7;
       cursor: pointer;
     }
-    .title-bubble {
-      display: inline-block;
-      background: #4e9cff;
-      color: white;
-      padding: 0.6rem 2rem;
-      font-size: 2rem;
-      border-radius: 999px;
-      margin: 1rem auto 2rem;
+
+    .blending-families,
+    .high-frequency,
+    .phoneme-table {
       text-align: center;
     }
-    .book-header {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+
+    table {
+      margin: auto;
     }
-    .book-header img {
-      max-width: 180px;
-      border-radius: 12px;
-      margin-top: 2rem;
-    }
+
     .bottom-nav {
       display: flex;
       justify-content: center;
       gap: 1rem;
       margin: 3rem 0 2rem;
     }
+
     .bottom-nav a {
       background: #7fc8f8;
       color: white;
@@ -63,17 +96,14 @@
       transition: background 0.3s;
       display: inline-block;
     }
+
     .bottom-nav a:hover {
       background: #5aaee6;
-    }
-    table {
-      margin: auto;
     }
   </style>
 </head>
 <body>
-  <main class="decodable-prelearning container">
-    <!-- Header with Poster and Title -->
+  <main class="decodable-prelearning">
     <div class="book-header">
       <img src="../../../assets/images/decodable/book13/poster.webp" alt="A Fat Hat Cover">
       <h1 class="title-bubble">A Fat Hat</h1>
